# GPTQ_Sinkhorn

./: .gitignore  CLAUDE.md  README.md  analyze_weight_stats.py  eval_ppl.py  pyproject.toml  quantize.py  reconstruct.py  run_l2_7b_4bit_had_only.sh  run_l2_7b_4bit_sinkhorn.sh  run_l2_7b_4bit_sinkhorn_had.sh  run_visualize_weight_transforms.sh  visualize_weight_transforms.py
docs/: ablation_results.md  프로젝트 발표 구조.md
gptq_sinkhorn/: __init__.py  config.py
gptq_sinkhorn/algorithms/: gptq.py
gptq_sinkhorn/models/: __init__.py  base.py  llama.py  opt.py
gptq_sinkhorn/utils/: calibration.py  hadamard.py  hessian.py
scripts/: run_analyze_weight_stats.sh  run_l2_7b_2bit_g128_sinkhorn_had.sh  run_l2_7b_3bit_g128_sinkhorn_had.sh  run_l2_7b_4bit_baseline.sh  run_l2_7b_4bit_rot_first.sh  run_l2_7b_g128_baseline.sh  run_l2_7b_g128_had_only.sh  run_l2_7b_g128_rot_first.sh  run_l2_7b_g128_sinkhorn.sh  run_l2_7b_g128_sinkhorn_had.sh  run_l3_8b_4bit_baseline.sh  run_l3_8b_4bit_had_only.sh  run_l3_8b_4bit_rot_first.sh  run_l3_8b_4bit_sinkhorn.sh  run_l3_8b_4bit_sinkhorn_had.sh  run_l3_8b_g128_baseline.sh  run_l3_8b_g128_had_only.sh  run_l3_8b_g128_rot_first.sh  run_l3_8b_g128_sinkhorn.sh  run_l3_8b_g128_sinkhorn_had.sh  run_l3_8b_visualize_weight_transforms.sh
