[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gptq-sinkhorn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers",
    "datasets",
    "tqdm",
]

[project.optional-dependencies]
dev = ["black", "isort"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gptq_sinkhorn*"]
